fix: stretch sidebar to full height in app shell

--- a/src/app/layout/app-shell/app-shell.scss
+++ b/src/app/layout/app-shell/app-shell.scss
@@ -1,3 +1,7 @@
+app-sidebar {
+    height: stretch;
+}
+
 .skip-link {
     position: fixed;
     z-index: 100;
